[package]
name = "rscheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
chumsky = "0.8.0"
memmap2 = "0.5.2"
cranelift = "0.81.1"
cranelift-module = "0.81.1"
cranelift-jit = "0.81.1"
ariadne = "0.1.5"
num-bigint = "0.4.3"
